--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build": "webpack --progress --colors"
   },
   "dependencies": {
+    "autobind-decorator": "^1.3.4",
     "axios": "^0.15.3",
     "babel-polyfill": "^6.20.0",
     "bem-cn": "^2.1.3",
