--- a/package.json
+++ b/package.json
@@ -14,12 +14,20 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.26.1",
-    "enzyme": "^2.7.0",
+    "enzyme": "^2.7.1",
+    "jasmine": "^2.5.3",
+    "karma": "^1.4.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "^0.0.26",
+    "karma-webpack": "^2.0.1",
     "node-sass": "4.0.0",
+    "react-addons-test-utils": "^15.4.2",
     "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
-    "webpack": "2.2.0-rc.1",
-    "webpack-dev-server": "2.2.0-rc.0"
+    "webpack": "2",
+    "webpack-dev-server": "2"
   },
   "scripts": {
     "start": "webpack-dev-server --port=4000 --hot --inline --progress --colors",
@@ -30,6 +38,7 @@
     "axios": "^0.15.3",
     "babel-polyfill": "^6.20.0",
     "bem-cn": "^2.1.3",
+    "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
