--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
     "react"
   ],
   "plugins": [
+    "react-hot-loader/babel",
     "transform-decorators-legacy",
     "transform-class-properties",
     "syntax-async-functions"
