--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "react-addons-test-utils": "^15.4.2",
     "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
-    "webpack": "2",
-    "webpack-dev-server": "2"
+    "webpack": "^2",
+    "webpack-dev-server": "^2"
   },
   "scripts": {
     "start": "webpack-dev-server --port=4000 --hot --inline --progress --colors",
@@ -40,6 +40,11 @@
     "bem-cn": "^2.1.3",
     "moment": "^2.17.1",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-hot-loader": "^3",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-saga": "0.14.3"
   }
 }
